@@ -14,6 +14,10 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Fix for bug 2985631 - can not create a new character if you have a long
+account password.  Simple solution is to just truncat password.
+MSW 2010-04-11
+
 Add some minimal new character support.  Work in progress, but added code
 that at least hands off the username/password to server.
 ---
